# battleships-c

./: CMakeLists.txt  Task1.c  Task2.c  Task3.c  Task4.c  Task5.c  Task6.c  Task7.c  Task8.c  Task9.c  battleships.c  main.c  testinr.c
