
cmake_minimum_required(VERSION 3.26)
project(Battleships C)

set(CMAKE_C_STANDARD 99)


add_executable(main main.c)
add_executable(PrintArray Task1.c)
add_executable(InitialiseMap Task2.c)
add_executable(AddRandomShip Task3.c)
add_executable(CountValues Task4.c)
add_executable(TopLeftPosition Task5.c)
add_executable(IsShipValid Task6.c)
add_executable(InitialiseRandomMap Task7.c)
add_executable(FireInTheHole Task8.c)
add_executable(GameOver Task9.c)
add_executable(battleships battleships.c)
add_executable(testinlg testinr.c)
